[workspace]
# Order is important as this is the order the crates will be released.
members = [
  "juniper_codegen",
  "juniper",
  #"integration_tests/juniper_tests", #FIXME: make tests work again with new 64 bit default scalars
  "integration_tests/juniper_2018_edition_tests",
  "juniper_hyper",
  "juniper_iron",
  #"juniper_rocket",
  "juniper_warp",
]
exclude = [
  "docs/book/tests",
]
